<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardElevation="@dimen/common_padding_min"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/common_padding_min"
    app:cardCornerRadius="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNameCorte"
            style="?attr/textAppearanceHeadline6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:background="?attr/selectableItemBackground"
            android:text="@string/text_name_corte"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cbDelete"/>

        <ImageButton
            android:id="@+id/cbDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:layout_marginEnd="@dimen/common_padding_default"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/text_description_delete"
            android:src="@drawable/ic_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/common_padding_min"
            android:contentDescription="@string/text_image_Corte"
            app:layout_constraintBottom_toTopOf="@+id/tvDescripcionCorte"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNameCorte" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDescripcionCorte"
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_padding_default"
            android:padding="@dimen/common_padding_min"
            android:background="?attr/selectableItemBackground"
            android:text="@string/text_name_description"
            android:inputType="textMultiLine"
            android:maxLines="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivPhoto" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>